PumpState broadcasting